--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ build/
 ### VS Code ###
 .vscode/
 
+## macOS
+.DS_Store
 
 # FRONTEND (ANGULAR)
 # See http://help.github.com/ignore-files/ for more about ignoring files.
